se realizan mejoras de seguridad en modulo auth, se realizan mejoras en seguridad y se personalizan las excepciones.