@@ -4,6 +4,7 @@ import com.eventHub.backend_eventHub.auth.jwt.JwtAuthenticationFilter;
 import com.eventHub.backend_eventHub.auth.jwt.JwtEntryPoint;
 import com.eventHub.backend_eventHub.auth.service.UserAuthService;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -12,6 +13,7 @@ import org.springframework.security.authentication.dao.DaoAuthenticationProvider
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -21,41 +23,63 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
-@EnableMethodSecurity
+@EnableMethodSecurity(prePostEnabled = true)
 public class SecurityConfig {
 
-    @Autowired
-    private UserAuthService userAuthService;
+    private final UserAuthService userAuthService;
+    private final JwtEntryPoint jwtEntryPoint;
+    private final JwtAuthenticationFilter jwtAuthenticationFilter;
+
+    @Value("${app.cors.allowed-origins:http://localhost:4200,http://localhost:5173}")
+    private String[] allowedOrigins;
 
     @Autowired
-    private JwtEntryPoint jwtEntryPoint;
-
-    @Autowired
-    private JwtAuthenticationFilter jwtAuthenticationFilter;
+    public SecurityConfig(UserAuthService userAuthService,
+                          JwtEntryPoint jwtEntryPoint,
+                          JwtAuthenticationFilter jwtAuthenticationFilter) {
+        this.userAuthService = userAuthService;
+        this.jwtEntryPoint = jwtEntryPoint;
+        this.jwtAuthenticationFilter = jwtAuthenticationFilter;
+    }
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        http
-                .csrf(csrf -> csrf.disable())
+        return http
+                .csrf(AbstractHttpConfigurer::disable)
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .exceptionHandling(exception -> exception.authenticationEntryPoint(jwtEntryPoint))
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .exceptionHandling(exception ->
+                        exception.authenticationEntryPoint(jwtEntryPoint))
+                .sessionManagement(session ->
+                        session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
-                        // permitir preflights CORS
+                        // Permitir pre-flights CORS
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                        .requestMatchers("/auth/**", "/password/**", "/actuator/health", "/actuator/info").permitAll()
+
+                        // Endpoints públicos
+                        .requestMatchers("/auth/**", "/password/**").permitAll()
+                        .requestMatchers("/actuator/health", "/actuator/info").permitAll()
+                        .requestMatchers("/swagger-ui/**", "/v3/api-docs/**").permitAll()
+
+                        // Endpoints de administración
                         .requestMatchers("/admin/**").hasRole("ADMIN")
+
+                        // Endpoints de usuario autenticado
                         .requestMatchers(HttpMethod.GET, "/users/me", "/users/me/**").authenticated()
                         .requestMatchers(HttpMethod.PUT, "/users/me", "/users/me/**").authenticated()
+
+                        // Gestión de usuarios solo para admin
                         .requestMatchers("/users/**").hasRole("ADMIN")
+
+                        // El resto requiere autenticación
                         .anyRequest().authenticated()
-                )  // se quita ;
-        //se quite http
-       .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
-        return http.build();
+                )
+                .authenticationProvider(authenticationProvider())
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
+                .build();
     }
 
     @Bean
@@ -67,30 +91,42 @@ public class SecurityConfig {
     }
 
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration) throws Exception {
-        return authenticationConfiguration.getAuthenticationManager();
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+        return config.getAuthenticationManager();
     }
 
     @Bean
     public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
+        return new BCryptPasswordEncoder(12); // Usar strength 12 para mayor seguridad
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowCredentials(true); // se agrego el 22 para cors
-        configuration.setAllowedOrigins(List.of(
-                "http://localhost:4200",
-                "http://localhost:5173",
-                "https://event-hub-rose-omega.vercel.app/",
-                "admin-eventhub.vercel.app",
-                "http://127.0.0.1:49183"
+
+        // Configurar orígenes permitidos desde properties
+        configuration.setAllowedOrigins(Arrays.asList(allowedOrigins));
+
+        // Métodos HTTP permitidos
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+
+        // Headers permitidos
+        configuration.setAllowedHeaders(List.of(
+                "Authorization",
+                "Content-Type",
+                "X-Requested-With",
+                "Accept",
+                "Origin"
         ));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+
+        // Headers expuestos
+        configuration.setExposedHeaders(List.of("Authorization"));
+
+        // Permitir credenciales
         configuration.setAllowCredentials(true);
 
+        // Tiempo de cache para preflight
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
